welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:49: error: not found: value dessineFLeur
  dessineFLeur(Color.ORANGE)
  ^